--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ body {
 
 .calculator {
   position: absolute;
-  background-color: 000;
   width: 280px;;
   padding: 20px;
   font-family: 'Roboto';
@@ -51,7 +50,8 @@ body {
 }
 
 .buttons h1:hover {
-  color: #607D8B;
+  background-color: #607D8B;
+  color: #fff;
 }
 
 .funcs {
@@ -70,6 +70,7 @@ body {
 }
 
 .funcs h1:hover {
+  background-color: #607D8B;
   color: #fff;
 }
 
